# rocoworld-yise-detector

./: .gitignore  README.md  pyproject.toml  readme_for_ai.md
config/: config.example.json  readme_for_ai.md
data/: monsters.sample.json  readme_for_ai.md
samples/: readme_for_ai.md
src/rocoworld_yise_detector/: __main__.py  cli.py  config.py  database.py  detector.py  models.py  parser.py  readme_for_ai.md  watcher.py
tests/: readme_for_ai.md  test_cli.py  test_detector.py  test_parser.py
